--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -29,7 +29,7 @@
 
 <div id="daily" class="section corner-all">
   <div id="daily-intro" class="minor intro left">
-  <h1 class="yellow-color">维基日刊<sup>Alpha</sup></h1>
+  <h1>维基日刊<sup>Alpha</sup></h1>
   <p>每日从维基百科最新的编辑成果中遴选出文章结集成一本杂志。</p>
   </div>
   <div class="previous"><img src="/images/p.png" width="40px"></div>
@@ -40,27 +40,35 @@
 <div id="planed" class="section">
   <div id="books" class="left corner-all">
     <div class="left">
-      <img src="http://commons.wikimedia.org/w/thumb.php?f=Carl_Spitzweg_021.jpg&w=130" />
+      <img src="/images/library.jpg" />
     </div>
     <div class="right intro">
-      <h1 class="blue-color">维基图书<sup>计划中</sup></h1>
+      <h1>维基图书<sup>计划中</sup></h1>
       <p>维基百科和维基文库优秀文章作成的电子书。</p>
     </div>
   </div>
   <div id="square" class="right corner-all">
     <div class="left">
-      <img src="http://commons.wikimedia.org/w/thumb.php?f=Frankfurt_Am_Main-Morgenstern-KAVFFM-007-Der_Roemerberg_in_Frankfurt_a_M.jpg&w=200" />
+      <img src="/images/square.jpg" />
     </div>
     <div class="right intro">
-      <h1 class="red-color">维基广场<sup>计划中</sup></h1>
+      <h1>维基广场<sup>计划中</sup></h1>
       <p>维基百科上的讨论、Twitter的维基相关热点。</p>
     </div>
   </div>
 </div>
 
-<div class="clear">
-<div id="footer">
-<img src="/images/CC-BY-SA-icon-80x15.png" />
+<div id="footer" class="right corner-all">
+<pre class="left" style="text-align:left;font-size:xx-smaller;">
+  |\_____/|
+  )(0) (0)(
+  )   V   (
+  )       (
+  )       (
+--)ooo-ooo(--
+</pre>
+  <p>关于&nbsp;/&nbsp;团队&nbsp;/&nbsp;版权</p>
+  <p><img src="/images/CC-BY-SA-icon-80x15.png" /></p>
 </div>
 
 <script>
