--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,7 +6,7 @@ body {
 
 #header {
     width: 960px;
-    height: 100px;
+    height: 80px;
     color: #eeeeee;
 }
 
@@ -55,6 +55,7 @@ body {
 
 .section h1 sup {
     font-size: small;
+    color: #eeeeee;
 }
 
 .intro {
