fix wrong path and remove ascii art

--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -59,15 +59,7 @@
 </div>
 
 <div id="footer" class="right corner-all">
-<pre class="left" style="text-align:left;font-size:xx-smaller;">
-  |\_____/|
-  )(0) (0)(
-  )   V   (
-  )       (
-  )       (
---)ooo-ooo(--
-</pre>
-  <p>关于&nbsp;/&nbsp;团队&nbsp;/&nbsp;版权</p>
+  <p>关于&nbsp;/&nbsp;团队&nbsp;/&nbsp;参与&nbsp;/&nbsp;版权</p>
   <p><img src="/images/CC-BY-SA-icon-80x15.png" /></p>
 </div>
 
