--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -239,19 +239,53 @@ body {
     line-height: 100%;
 }
 
-.cover-small-full .cover-small-w img {
+.cover-small-full .cover-small-u {
+    position: absolute;
+    color: #EEE;
+    font-size: small;
+    text-align: left;
+    height: 15%;
+    padding: 2px;
+    z-index: 10;
+}
+
+.cover-small-full .cover-small-w {
+    position: absolute;
+    top:  0px;
+    left: 0px;
     height: 100%;
     width: 100%;
+    color: #eeeeee;
+    font-size: small;
+    text-align: left;
+    z-index: 0;
+}
+
+.cover-small-full .cover-small-w table {
+    width: 100%;
+    height: 100%;
+    border-spacing: 0;
+}
+
+.cover-small-full .cover-small-w table tr td div {
+    max-width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+.cover-small-full .cover-small-w table tr td div img {
+    width: 100%;
+    height: 100%;
 }
 
 .cover-small-west .cover-small-v {
     position: absolute;
     top: 3px;
     right: 3px;
-    width: 10%;
+    width: 15%;
     color: #eeeeee;
     font-size: small;
-    text-align: left;
+    text-align: center;
 }
 
 .cover-small-west .cover-small-w {
@@ -265,9 +299,20 @@ body {
     text-align: left;
 }
 
-.cover-small-west .cover-small-w img {
-    height: 100%;
+.cover-small-west .cover-small-w table {
     width: 100%;
+    height: 100%;
+    border-spacing: 0;
+}
+
+.cover-small-west .cover-small-w table tr td div {
+    max-width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+.cover-small-west .cover-small-w table tr td div img {
+    height: 100%;
 }
 
 .cover-small- img {
