--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -4,18 +4,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="content-language" content="zh-cn">
   <link rel="copyright" href="http://creativecommons.org/licenses/by-sa/3.0/" />
+  <link rel="stylesheet" href="/styles/main.css" type="text/css" media="screen" />
   <script src="/javascripts/jquery-min.js"></script>
-  <script src="/javascripts/jquery.mousewheel.js"></script>
   <script src="/javascripts/jcarousellite.min.js"></script>
   <script src="/javascripts/underscore-min.js"></script>
   <script src="/javascripts/carousel.js"></script>
   <title>维基新知－首页</title>
-  <link rel="stylesheet" href="/styles/main.css" type="text/css" media="screen" />
 </head>
 <body>
 <div id="header">
   <div id="logo">
-      <a href="./" title="维基新知"><img src="/images/logo-title.png" width="240" height="60" alt="维基新知"/></a>
+      <a href="/" title="维基新知"><img src="/images/logo-title.png" width="240" height="60" alt="维基新知"/></a>
       <!--div id="title">普及新知，传播自由文化</div-->
   </div>
   <div id="menu-container" class="corner-half">
