--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,47 @@
+/* reset.css */
+
+* {
+    margin:0;padding:0;border:0;
+}
+
+body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, dialog, figure, footer, header, hgroup, nav, section {
+    vertical-align: baseline;
+}
+
+article, aside, dialog, figure, footer, header, hgroup, nav, section {
+    font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;display:block;
+}
+
+table {
+    border-collapse:collapse;border-spacing:0;
+}
+
+caption, th, td {
+    text-align:left;font-weight:normal;float:none !important;
+}
+
+table, th, td {
+    vertical-align:middle;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+    content:'';
+}
+
+blockquote, q {
+    quotes:"" "";
+}
+
+a img {
+    border:none;
+}
+
+:focus {
+    outline:0;
+}
+
+/* main */
+
 body {
     width: 960px;
     margin: 0 auto;
@@ -16,6 +60,11 @@ body {
 
 #logo a {
     float: left;
+    text-decoration: none;
+}
+
+#logo a img {
+    border: 0;
 }
 
 #title {
@@ -300,21 +349,25 @@ body {
 }
 
 .cover-small-west .cover-small-w table {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     border-spacing: 0;
 }
 
 .cover-small-west .cover-small-w table tr td div {
     max-width: 100%;
+    max-height: 100%;
     height: 100%;
     border: 0;
 }
 
 .cover-small-west .cover-small-w table tr td div img {
-    height: 100%;
+    height: 123px;
 }
 
+.cover-small- {
+    display: none;
+}
 .cover-small- img {
     display: none;
 }
@@ -340,4 +393,25 @@ body {
 
 .cover-small-west .cover-small-u {
     display: none;
+}
+
+/* aligns */
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+.center {
+    display: block;
+    text-align: center;
+}
+
+/* tools */
+
+.clickable {
+    cursor: pointer;
 }
