link to issues in mainpage

--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -19,7 +19,7 @@
   </div>
   <div id="menu-container" class="corner-half">
     <ul class="menu">
-      <li class="menuitem yellow">日刊</li>
+      <li class="menuitem yellow"><a href="/issues/">日刊</a></li>
       <li class="menuitem blue">图书</li>
       <li class="menuitem red">广场</li>
     </ul>
@@ -28,7 +28,7 @@
 
 <div id="daily" class="section corner-all">
   <div id="daily-intro" class="minor intro left">
-  <h1>维基日刊<sup>Alpha</sup></h1>
+  <h1><a href="/issues/">维基日刊<sup>Alpha</sup></a></h1>
   <p>每日从维基百科最新的编辑成果中遴选出文章结集成一本杂志。</p>
   </div>
   <div class="previous"><img src="/images/p.png" width="40px"></div>
