--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -41,7 +41,7 @@
     <div class="left">
       <img src="/images/library.jpg" />
     </div>
-    <div class="right intro">
+    <div id="books-intro" class="right intro">
       <h1>维基图书<sup>计划中</sup></h1>
       <p>维基百科和维基文库优秀文章作成的电子书。</p>
     </div>
@@ -50,9 +50,9 @@
     <div class="left">
       <img src="/images/square.jpg" />
     </div>
-    <div class="right intro">
+    <div id="square-intro" class="right intro">
       <h1>维基广场<sup>计划中</sup></h1>
-      <p>维基百科上的讨论、Twitter的维基相关热点。</p>
+      <p>维基百科上的讨论，推特微博的维基相关热点。</p>
     </div>
   </div>
 </div>
