add about and team

--- a/app/templates/about.erb
+++ b/app/templates/about.erb
@@ -26,38 +26,23 @@
   </div>
 </div>
 
-<div id="daily" class="section corner-all">
-  <div id="daily-intro" class="minor intro left">
-  <h1><a href="/issues/">维基日刊<sup>Alpha</sup></a></h1>
-  <p>每日从维基百科最新的编辑成果中遴选出文章结集成一本杂志。</p>
+<div id="about" class="section corner-all">
+  <div id="about-intro" class="intro left">
+    <h1>关于</h1>
+    <p>把知识传播到地球的每一个角落，这是维基运动的使命。一些来自维基百科社群、开源社区和热爱公益的人士一起创建了这个小小的网站。
+       它将致力于知识的普及和推动自由文化在中国的传播。</p>
+    <p>古人有云“海纳百川，有容乃大”，西贤艾萨克·阿西莫夫也说“知识不可分隔”。科学与人文都是我们不可偏废的精神资粮。</p>
+    <p>从上个世纪的自由软件运动到新世纪的自由文化运动，在做法上都是去除人为的版权屏障，然而它们的内在精神都是鼓励分享。</p>
+    <p>我们将维基诸网站的优秀内容汇集成册，递送给大家；点滴文字都是志愿者辛苦的付出。所以更希望大家能闲暇时再奉献自己的所知于维基。</p>
+    <p>普及犹如撒种，希望芽可以成木、木可成林。</p>
   </div>
-  <div class="previous"><img src="/images/p.png" width="40px"></div>
-  <div id="daily-detail" class="major detail right"></div>
-  <div class="next"><img src="/images/n.png" width="40px"></div>
-</div>
-
-<div id="planed" class="section">
-  <div id="books" class="left corner-all">
-    <div class="left">
-      <img src="/images/library.jpg" />
-    </div>
-    <div id="books-intro" class="right intro">
-      <h1>维基图书<sup>计划中</sup></h1>
-      <p>维基百科和维基文库优秀文章作成的电子书。</p>
-    </div>
-  </div>
-  <div id="square" class="right corner-all">
-    <div class="left">
-      <img src="/images/square.jpg" />
-    </div>
-    <div id="square-intro" class="right intro">
-      <h1>维基广场<sup>计划中</sup></h1>
-      <p>维基百科上的讨论，推特微博的维基相关热点。</p>
-    </div>
+  <div class="right" style="padding-top:5px;">
+      <img src="/images/reading-room.jpg" />
+      <p style="font-size: xx-small;text-align: right;">本图由<a href="http://commons.wikimedia.org/wiki/User:Diliff">Diliff</a>摄制，并依CC-BY-SA分享。</p>
   </div>
 </div>
 
-<div id="small-footer" class="right corner-all">
+<div id="footer">
   <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;参与&nbsp;/&nbsp;版权</p>
   <p><img src="/images/CC-BY-SA-icon-80x15.png" /></p>
 </div>
