--- a/app/templates/issues/calendar.erb
+++ b/app/templates/issues/calendar.erb
@@ -36,6 +36,11 @@
 
 <div id="calendar" class="corner-all"></div>
 
+<div id="footer">
+  <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;参与&nbsp;/&nbsp;版权</p>
+  <p><img src="/images/CC-BY-SA-icon-80x15.png" /></p>
+</div>
+
 <script>
     $(function() {
       calendar(new Date(<%= year %>, <%= month %>, 1));
