--- a/app/templates/issues/issue.erb
+++ b/app/templates/issues/issue.erb
@@ -21,8 +21,9 @@
 
 <div id="leftbar">
     <div class="go_cal clickable">回日历</div>
-    <div id="go_prev" class="clickable">上一页</div>
-    <div id="go_toc_left" class="clickable">目　录</div>
+    <div class="go_prev clickable">上一页</div>
+    <div class="go_next clickable">下一页</div>
+    <div class="go_toc clickable">目　录</div>
 </div>
 
 <div id="doublepage">
@@ -40,8 +41,9 @@
 
 <div id="rightbar">
     <div class="go_cal clickable">回日历</div>
-    <div id="go_next" class="clickable">下一页</div>
-    <div id="go_toc_right" class="clickable">目　录</div>
+    <div class="go_prev clickable">上一页</div>
+    <div class="go_next clickable">下一页</div>
+    <div class="go_toc clickable">目　录</div>
 </div>
 
 </div>
