--- a/app/templates/team.erb
+++ b/app/templates/team.erb
@@ -26,38 +26,23 @@
   </div>
 </div>
 
-<div id="daily" class="section corner-all">
-  <div id="daily-intro" class="minor intro left">
-  <h1><a href="/issues/">维基日刊<sup>Alpha</sup></a></h1>
-  <p>每日从维基百科最新的编辑成果中遴选出文章结集成一本杂志。</p>
+<div id="team" class="section corner-all">
+  <div id="team-intro" class="intro left">
+    <h1>团队</h1>
+    <h2>理事会</h2>
+    <p>毛项辉（Isaac Mao）、冯大辉（Fengg）、李士杰（Ilya）、霍炬（Virusho）、王鹏（Number5）、时昭（Shizhao）、苑明理（Mountain）</p>
+    <h2>源码贡献者</h2>
+    <p>陈恺（Kaichen）、苑明理（Mountain）</p>
+    <h2>内容编辑</h2>
+    <p></p>
   </div>
-  <div class="previous"><img src="/images/p.png" width="40px"></div>
-  <div id="daily-detail" class="major detail right"></div>
-  <div class="next"><img src="/images/n.png" width="40px"></div>
-</div>
-
-<div id="planed" class="section">
-  <div id="books" class="left corner-all">
-    <div class="left">
-      <img src="/images/library.jpg" />
-    </div>
-    <div id="books-intro" class="right intro">
-      <h1>维基图书<sup>计划中</sup></h1>
-      <p>维基百科和维基文库优秀文章作成的电子书。</p>
-    </div>
-  </div>
-  <div id="square" class="right corner-all">
-    <div class="left">
-      <img src="/images/square.jpg" />
-    </div>
-    <div id="square-intro" class="right intro">
-      <h1>维基广场<sup>计划中</sup></h1>
-      <p>维基百科上的讨论，推特微博的维基相关热点。</p>
-    </div>
+  <div class="right" style="padding-top:5px;">
+      <img src="/images/bee.jpg" />
+      <p style="font-size: xx-small;text-align: right;">本图由<a href="http://www.flickr.com/photos/majamarko/">majamarko</a>摄制，并依CC-BY-NC分享。</p>
   </div>
 </div>
 
-<div id="small-footer" class="right corner-all">
+<div id="footer">
   <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;参与&nbsp;/&nbsp;版权</p>
   <p><img src="/images/CC-BY-SA-icon-80x15.png" /></p>
 </div>
