--- a/app/templates/team.erb
+++ b/app/templates/team.erb
@@ -9,7 +9,7 @@
   <script src="/javascripts/jcarousellite.min.js"></script>
   <script src="/javascripts/underscore-min.js"></script>
   <script src="/javascripts/carousel.js"></script>
-  <title>维基新知－首页</title>
+  <title>维基新知－团队</title>
 </head>
 <body>
 <div id="header">
@@ -30,9 +30,9 @@
   <div id="team-intro" class="intro left">
     <h1>团队</h1>
     <h2>理事会</h2>
-    <p>毛项辉（Isaac Mao）、冯大辉（Fengg）、李士杰（Ilya）、霍炬（Virusho）、王鹏（Number5）、时昭（Shizhao）、苑明理（Mountain）</p>
+    <p><a href="http://isaacmao.com">毛向辉</a>（<a href="http://twitter.com/isaac">Isaac Mao</a>）、<a href="http://www.dbanotes.net">冯大辉</a>（<a href="http://twitter.com/fengg">Fengg</a>）、<a href="http://www.ilyagram.org">李士杰</a>（<a href="http://twitter.com/ilya">Ilya</a>）、<a href="http://blog.devep.net/virushuo/">霍炬</a>（<a href="http://twitter.com/virusho">Virusho</a>）、<a href="http://brucewang.net">王鹏</a>（<a href="http://twitter.com/number5">Number5</a>）、<a href="http://shizhao.org">时昭</a>（<a href="http://twitter.com/shizhao">Shizhao</a>）、<a href="http://onecorner.org">苑明理</a>（<a href="http://twitter.com/mountain">Mountain</a>）</p>
     <h2>源码贡献者</h2>
-    <p>陈恺（Kaichen）、苑明理（Mountain）</p>
+    <p><a href="http://thekaiway.com">陈恺</a>（<a href="http://twitter.com/chenk85">Kaichen</a>）、<a href="http://onecorner.org">苑明理</a>（<a href="http://twitter.com/mountain">Mountain</a>）</p>
     <h2>内容编辑</h2>
     <p></p>
   </div>
