--- a/app/templates/main.erb
+++ b/app/templates/main.erb
@@ -58,7 +58,7 @@
 </div>
 
 <div id="small-footer" class="right corner-all">
-  <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;参与&nbsp;/&nbsp;版权</p>
+  <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;<a href="/participation">参与</a></p>
   <p><img src="/images/CC-BY-SA-icon-80x15.png" /></p>
 </div>
 
