--- a/app/templates/issues/calendar.erb
+++ b/app/templates/issues/calendar.erb
@@ -37,7 +37,7 @@
 <div id="calendar" class="corner-all"></div>
 
 <div id="footer">
-  <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;参与&nbsp;/&nbsp;版权</p>
+  <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;<a href="/participation">参与</a></p>
   <p><img src="/images/CC-BY-SA-icon-80x15.png" /></p>
 </div>
 
