--- a/app/templates/participation.erb
+++ b/app/templates/participation.erb
@@ -9,7 +9,7 @@
   <script src="/javascripts/jcarousellite.min.js"></script>
   <script src="/javascripts/underscore-min.js"></script>
   <script src="/javascripts/carousel.js"></script>
-  <title>维基新知－关于</title>
+  <title>维基新知－团队</title>
 </head>
 <body>
 <div id="header">
@@ -26,20 +26,19 @@
   </div>
 </div>
 
-<div id="about" class="section corner-all">
-  <div id="about-intro" class="intro left">
-    <h1>关于</h1>
-    <p>维基新知，源自维基的最新知识。</p>
-    <p>把知识传播到地球的每一个角落，这是维基运动的使命。一些来自维基百科社群、开源社区和热爱公益的人士一起创建了这个小小的网站。
-       它将致力于知识的普及和推动自由文化在中国的传播。</p>
-    <p>古人有云“海纳百川，有容乃大”，西贤艾萨克·阿西莫夫也说“知识不可分割”。科学与人文都是我们不可偏废的精神资粮。</p>
-    <p>从上个世纪的自由软件运动到新世纪的自由文化运动，在做法上都是去除人为的版权屏障，然而它们的内在精神都是鼓励分享。</p>
-    <p>我们将维基诸网站的优秀内容，汇集成册，递送给大家；点滴文字都是志愿者辛苦的付出；所以更希望大家能闲暇时再奉献自己的所知于维基。</p>
-    <p>普及犹如撒种，希望芽可以成木、木可以成林。</p>
+<div id="participation" class="section corner-all">
+  <div id="participation-intro" class="intro left">
+    <h1>参与</h1>
+    <h2>投稿</h1>
+    <p>如果您希望投稿，那么请直接参与<a href="http://zh.wikipedia.org">维基百科</a>的撰写，我们的稿件都是经过社群的评选进而筛选出来的。</p>
+    <h2>参与开发</h1>
+    <p>如果您希望参与开发，那么请至<a href="https://github.com/mountain/distilled">GitHub</a>下载代码，并发信至mingli.yuan+wikiedge AT gmail.com说明你的经验和期望的参与方式。</p>
+    <h2>参与编辑</h1>
+    <p>如果您希望参与编辑，那么请发信至mingli.yuan+wikiedge AT gmail.com说明你的经验和期望的参与方式。</p>
   </div>
   <div class="right" style="padding-top:5px;">
-      <img src="/images/reading-room.jpg" />
-      <p style="font-size: xx-small;text-align: right;">本图由<a href="http://commons.wikimedia.org/wiki/User:Diliff">Diliff</a>摄制，并依CC-BY-SA分享。</p>
+      <img src="/images/hands.jpg" />
+      <p style="font-size: xx-small;text-align: right;">本图由<a href="http://www.flickr.com/photos/alicepopkorn/">AlicePopkorn</a>摄制，并依CC-BY分享。</p>
   </div>
 </div>
 
