--- a/app/templates/team.erb
+++ b/app/templates/team.erb
@@ -43,7 +43,7 @@
 </div>
 
 <div id="footer">
-  <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;参与&nbsp;/&nbsp;版权</p>
+  <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;<a href="/participation">参与</a></p>
   <p><img src="/images/CC-BY-SA-icon-80x15.png" /></p>
 </div>
 
