--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -305,7 +305,23 @@ body {
 #team-intro a {
     text-decoration: none;
     color: #999;
+}
 
+#participation {
+    padding: 10px;
+    width: 100%;
+    height: 450px;
+    background-color: #282828;
+}
+
+#participation-intro {
+    width: 60%;
+    padding: 10px;
+}
+
+#participation-intro a {
+    text-decoration: none;
+    color: #999;
 }
 
 .mag {
