fix title on participation

--- a/app/templates/participation.erb
+++ b/app/templates/participation.erb
@@ -9,7 +9,7 @@
   <script src="/javascripts/jcarousellite.min.js"></script>
   <script src="/javascripts/underscore-min.js"></script>
   <script src="/javascripts/carousel.js"></script>
-  <title>维基新知－团队</title>
+  <title>维基新知－参与</title>
 </head>
 <body>
 <div id="header">
