quick fix for style

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -134,6 +134,12 @@ body {
 .section p {
     margin-bottom: 1em;
     margin-top: 1em;
+    color: #999;
+}
+
+.section a {
+    text-decoration: none;
+    color: #999;
 }
 
 .intro {
