typo on participation

--- a/app/templates/participation.erb
+++ b/app/templates/participation.erb
@@ -32,9 +32,9 @@
     <h2>投稿</h1>
     <p>如果您希望投稿，那么请直接参与<a href="http://zh.wikipedia.org">维基百科</a>的撰写，我们的稿件都是经过社群的评选进而筛选出来的。</p>
     <h2>参与开发</h1>
-    <p>如果您希望参与开发，那么请至<a href="https://github.com/mountain/distilled">GitHub</a>下载代码，并发信至mingli.yuan+wikiedge AT gmail.com说明你的经验和期望的参与方式。</p>
+    <p>如果您希望参与开发，那么请至<a href="https://github.com/mountain/distilled">GitHub</a>下载代码，并发信至mingli.yuan+wikiedge AT gmail.com说明您的经验和期望的参与方式。</p>
     <h2>参与编辑</h1>
-    <p>如果您希望参与编辑，那么请发信至mingli.yuan+wikiedge AT gmail.com说明你的经验和期望的参与方式。</p>
+    <p>如果您希望参与编辑，那么请发信至mingli.yuan+wikiedge AT gmail.com说明您的经验和期望的参与方式。</p>
   </div>
   <div class="right" style="padding-top:5px;">
       <img src="/images/hands.jpg" />
