--- a/app/templates/issues/issue.erb
+++ b/app/templates/issues/issue.erb
@@ -29,7 +29,7 @@
 <div id="doublepage">
     <div id="leftpage">
       <div id="leftview">
-        <div id="leftcontent" class="content"></div>
+        <div id="leftcontent" class="content instapaper_body"></div>
       </div>
     </div>
     <div id="rightpage">
