--- a/app/templates/issues/calendar.erb
+++ b/app/templates/issues/calendar.erb
@@ -38,7 +38,7 @@
 
 <div id="footer">
   <p><a href="/about">关于</a>&nbsp;/&nbsp;<a href="/team">团队</a>&nbsp;/&nbsp;<a href="/participation">参与</a></p>
-  <p><img src="/images/CC-BY-SA-icon-80x15.png" /></p>
+  <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh"><img src="/images/CC-BY-SA-icon-80x15.png" /></a></p>
 </div>
 
 <script>
