add wikitable css

--- a/app/templates/style.erb
+++ b/app/templates/style.erb
@@ -46,6 +46,13 @@ table, th, td {
     vertical-align:middle;
 }
 
+table.wikitable {
+margin: 1em 1em 1em 0;
+background: #F9F9F9;
+border: 1px #AAA solid;
+border-collapse: collapse;
+}
+
 blockquote:before, blockquote:after, q:before, q:after {
     content:'';
 }
